# kanima-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
aliasing/: CMakeLists.txt  aliasing.cpp
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-debug/aliasing/: Makefile  cmake_install.cmake
build-debug/explode/: Makefile  cmake_install.cmake  glassball.crtscene
build-debug/fly/: Makefile  cmake_install.cmake  dragon.crtscene
build-debug/kanima/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-debug/pyramid/: Makefile  cmake_install.cmake
build-debug/pyramid-texture/: Makefile  cmake_install.cmake
build-debug/sdl2_gui/: Makefile  cmake_install.cmake
build-debug/sdl_test/: Makefile  cmake_install.cmake
build-debug/turntable/: Makefile  cmake_install.cmake
build-debug/vertigo/: Makefile  cmake_install.cmake
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/aliasing/: Makefile  cmake_install.cmake  glassball.crtscene
build-release/explode/: Makefile  cmake_install.cmake
build-release/fly/: Makefile  cmake_install.cmake
build-release/kanima/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-release/pyramid-texture/: Makefile  cmake_install.cmake
explode/: CMakeLists.txt  explode.cpp
fly/: CMakeLists.txt  fly.cpp
pyramid/: CMakeLists.txt  pyramid.cpp
pyramid-texture/: CMakeLists.txt  pyramid-texture.cpp
sdl2_gui/: CMakeLists.txt  sdl_gui.cpp  sdl_gui.h
sdl_test/: CMakeLists.txt  main.cpp
turntable/: CMakeLists.txt  main.cpp
vertigo/: CMakeLists.txt  vertigo.cpp
(+52 files in other folders)
